# -mcp-daily-notes

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mcp_prompts.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
agents/: Archivist.md  CreativeMuse.md  ProjectManager.md  StrategicReviewer.md
docs/: LOCAL_AI_GUIDE.md  prompt_guide.md
docs/agents/: Archivist.md  CreativeMuse.md  ProjectManager.md  StrategicReviewer.md
examples/: business_idea.md  journal_entry.md  project_naves.md  sample_note.md
src/daily_notes/: server.py
tests/: test_divergent.py  test_notes.py
