[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-daily-notes"
version = "0.1.0"
authors = [
  { name="Luis Lopez", email="tu@email.com" },
]
description = "Senior MCP for local Markdown notes management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
